<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold" />

    <!--suppress AndroidUnknownAttribute -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appTitle">

        <TextView
            android:id="@+id/bmiDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/bmi_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/bmiDescription">

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/weight_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/weight_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!--suppress AndroidUnknownAttribute -->
                <EditText
                    android:id="@+id/weight_value"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="Weight of the body"
                    android:ems="10"
                    android:hint="@string/weight_label"
                    android:inputType="number"
                    android:textColorHint="#78909C"
                    android:visibility="visible"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Spinner
                    android:id="@+id/weight_spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:entries="@array/weight_types"
                    android:visibility="visible"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    tools:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/weight_error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="visible" />

            <TextView
                android:id="@+id/height_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/height_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/height_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!--suppress AndroidUnknownAttribute -->
                <EditText
                    android:id="@+id/height_value"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="Height of the body"
                    android:hint="@string/weight_label"
                    android:inputType="number"
                    android:textColorHint="#78909C"
                    android:visibility="visible"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Spinner
                    android:id="@+id/height_spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:entries="@array/height_types"
                    android:visibility="visible"
                    tools:visibility="visible" />
            </LinearLayout>

            <TextView
                android:id="@+id/height_error_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>